--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-rest-api",
+  "name": "project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.2",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.0"
-  }
+  "license": "ISC"
 }
